# atria

./: .gitignore  README.md  build_registry.py  cfg.json  config.json  pyproject.toml  test.ipynb  test.py  test5.py  test_hf.py  test_tf.py  test_types.py  testtest.py  testtesttest.ipynb
.github/workflows_disabled/: build-and-test.yaml
atria_datasets/: .gitignore  README.md  pyproject.toml
atria_datasets/examples/: load_datasets.ipynb  test.py
atria_datasets/examples/scripts/: prepare_cord.sh  prepare_rvlcdip.sh  prepare_tobacco3482.sh  prepare_wild_receipts.sh
atria_datasets/examples/scripts/dla/: prepare_doclaynet.sh  prepare_pubtables1m.sh
atria_datasets/examples/scripts/kie/: prepare_funsd.sh
atria_datasets/examples/scripts/te/: prepare_fintabnet.sh  prepare_pubtables1m.sh
atria_datasets/examples/scripts/vqa/: prepare_due.sh
atria_datasets/src/atria_datasets/: __init__.py  build_registry.py  prepare_dataset.py  registry.json  visualize_dataset.py
atria_datasets/src/atria_datasets/api/: datasets.py
atria_datasets/tests/: base_imports.py
atria_datasets/tests/registry/: test_module_registry.py
atria_datasets/usage/: prepare_dataset.sh
atria_datasets/usage/cls/: prepare_cifar10.py  prepare_doclaynet.py  prepare_rvlcdip.py  prepare_tobacco3482.py  prepare_tobacco3482_tokenized.py
atria_datasets/usage/kie/: prepare_cord.py  prepare_docbank.py  prepare_docile.py  prepare_funsd.py  prepare_sroie.py  prepare_wild_receipts.py
atria_datasets/usage/vqa/: prepare_docvqa.ipynb  prepare_docvqa.py  prepare_kleister_charity.py  prepare_wiki_table_questions.py
atria_insights/: pyproject.toml
atria_insights/src/atria_insights/: __init__.py  build_registry.py  model_explainer.py  registry.json
atria_insights/tests/: utilities.py
atria_insights/tests/cachers/: test_explanations_cacher.py  test_features_cacher.py  test_metric_data_cacher.py
atria_insights/tests/data_types/: test_explanation_state.py  test_features.py  test_metric_data.py
atria_insights/usage/explain_bert/: explain_bert.py
atria_insights/usage/explain_cifar10/: explain_cifar10.py
atria_insights/usage/train_cifar10/: explain_cifar10.py  train_cifar10.ipynb
atria_logger/: README.md  pyproject.toml
atria_logger/src/atria_logger/: __init__.py  _api.py  _constants.py  _handlers.py  _root.py  _utilities.py  api copy.py  api.py  filters.py  handlers.py  root.py  utilities.py
atria_logger/tests/: conftest.py  test_distributed_filter.py  test_handlers.py  test_logging.py
atria_logger/usage/: main.py
atria_metrics/: pyproject.toml
atria_metrics/src/atria_metrics/: __init__.py  build_registry.py  registry.json
atria_ml/: pyproject.toml
atria_ml/src/atria_ml/: build_registry.py  registry.json
atria_models/: pyproject.toml  test.ipynb
atria_models/src/atria_models/: __init__.py  build_registry.py  registry.json
atria_models/tests/models/: test2.py  test_bert.py  test_layoutlmv3.py  test_lilt.py  test_roberta.py
atria_registry/: .gitignore  README.md  pyproject.toml
atria_registry/src/atria_registry/: __init__.py  _common.py  _module_base.py  _module_builder.py  _module_registry.py  _registry_group.py  _utilities.py
atria_registry/tests/: conftest.py  test_module_spec.py  test_registry_group.py  utilities.py
atria_registry/usage/: example_group.py
atria_transforms/: pyproject.toml
atria_transforms/src/atria_transforms/: __init__.py  build_registry.py  constants.py  registry.json
atria_types/: README.md  pyproject.toml
atria_types/src/atria_types/: __init__.py  _common.py  _constants.py  _datasets.py  _factory.py  _pydantic.py
atria_types/src/atria_types/_base/: _data_model.py
atria_types/src/atria_types/_base/_mixins/: _file_path_convertible.py  _loadable.py  _table_serializable.py
atria_types/src/atria_types/_base/_ops/: _base_ops.py  _table_serialization_utils.py
atria_types/src/atria_types/_data_instance/: _base.py  _document_instance.py  _exceptions.py  _image_instance.py  base.py
atria_types/src/atria_types/_data_instance/_visualizers/: _base.py  _document.py
atria_types/src/atria_types/_generic/: _annotated_object.py  _annotations.py  _bounding_box.py  _doc_content.py  _image.py  _label.py  _ocr.py  _pdf.py  _qa_pair.py  _text_elements.py  pdf.py
atria_types/src/atria_types/_generic/_ops/: _bbox_ops.py  _image_ops.py
atria_types/src/atria_types/_ocr_engines/: __init__.py  _base.py  _tesseract.py  _utilities.py
atria_types/src/atria_types/_utilities/: _file.py  _image_encoding.py  _repr.py  _string_encoding.py  _url_fetchers.py  _urls.py  _viz.py
atria_types/src/atria_types/_utilities/_ocr_processors/: _base.py  _hocr_processor.py
atria_types/src/atria_types/utilities/ocr_parsers/: hocr_parser.py
atria_types/tests/: data_model_test_base.py  mock_data_models.py  test_imports.py  utilities.py
atria_types/tests/data_instances/: test_document_instance.py  test_image_instance.py
atria_types/tests/generics/: test_annotated_object.py  test_annotations.py  test_bounding_box.py  test_image.py  test_label.py  test_mock_data_models.py  test_ocr.py  test_question_answer_pair.py
atria_types/usage/: example_annotated_object.py  example_bbox.py  example_document_instance.py  example_image.py  example_image_instance.py  example_label.py  example_qa_pair.py
ci/: build_registry.sh  format.sh  lint.sh  packages.sh  run_checks.sh  test.sh
examples/explain_cifar10/: saliency.py
examples/image_classification/: README.md  explain.py  train.py
examples/image_classification/cifar10/: README.md
examples/image_classification/tobacco3482/: README.md
examples/layout_token_classification/: train.py
examples/layout_token_classification/funsd/: README.md
examples/question_answering/: train.py
examples/question_answering/docvqa/: README.md
examples/sequence_classification/: explain.py  train.py
examples/sequence_classification/tobacco3482/: README.md
examples/token_classification/: train.py
examples/train_cifar10/: train_cifar10.ipynb  train_cifar10.py
tmp/: build_registry.py  test.py  test_model.py  test_optimizers.py
(+428 files in other folders)
