[project]
name = "atriaml"
version = "0.1.0"
description = "AtriaML is a machine learning library providing core types and logging utilities for Atria-based projects."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "atria-logger",
    "atria-types",
]

[tool.setuptools]


[tool.uv.sources]
atria-logger = { path = "atria_logger", editable = true }
atria-types = { path = "atria_types", editable = true }

[dependency-groups]
dev = [
    "coverage>=7.12.0",
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]
