[project]
name = "atriaml"
version = "0.1.0"
description = "AtriaML is a machine learning library providing core types and logging utilities for Atria-based projects."
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "atria-datasets",
    "atria-logger",
    "atria-models",
    "atria-registry",
    "atria-transforms",
    "atria-types",
    "coloredlogs>=15.0.1",
]

[tool.setuptools]
packages = ["atria_logger", "atria_types", "atria_datasets"]

[tool.uv.sources]
atria-logger = { path = "atria_logger", editable = true }
atria-types = { path = "atria_types", editable = true }
atria-datasets = { path = "atria_datasets", editable = true }
atria-registry = { path = "atria_registry", editable = true }
atria-transforms = { path = "atria_transforms", editable = true }
atria-models = { workspace = true, editable = true }

[tool.uv.workspace]
members = [
    "atria_models",
]

[dependency-groups]
dev = [
    "coverage>=7.12.0",
    "faker>=38.2.0",
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
    "types-requests>=2.32.4.20250913",
]

[tool.mypy]
disable_error_code = ["import-untyped"]
