[project]
name = "atriaml"
version = "0.1.0"
description = "AtriaML is a machine learning library providing core types and logging utilities for Atria-based projects."
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "atria-datasets",
    "atria-insights",
    "atria-logger",
    "atria-metrics",
    "atria-ml",
    "atria-models",
    "atria-registry",
    "atria-transforms",
    "atria-types",
    "coloredlogs>=15.0.1",
    "fire>=0.7.1",
    "jupytext>=1.18.1",
    "torchxai",
]

[tool.setuptools]
packages = ["atria_logger", "atria_types", "atria_datasets", "atria_registry", "atria_transforms", "atria_models", "atria_ml", "atria_metrics", "atria_insights"]

[tool.uv.sources]
atria-logger = { path = "atria_logger", editable = true }
atria-types = { path = "atria_types", editable = true }
atria-registry = { path = "atria_registry", editable = true }
atria-transforms = { path = "atria_transforms", editable = true }
atria-models = { path = "atria_models", editable = true }
atria-ml = { path = "atria_ml", editable = true }
atria-datasets = { path = "atria_datasets", editable = true }
atria-metrics = { path = "atria_metrics", editable = true }
atria-insights = { path= "atria_insights", editable = true }
torchxai = { path = "../torchxai", editable = true }

[dependency-groups]
dev = [
    "coverage>=7.12.0",
    "faker>=38.2.0",
    "ipywidgets>=8.1.8",
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
    "types-requests>=2.32.4.20250913",
]

[tool.mypy]
disable_error_code = ["import-untyped"]
